--- a/public/courses/web.html
+++ b/public/courses/web.html
@@ -472,7 +472,7 @@
               course: document.getElementById("course").value,
             };
             console.log(formData); // For debugging
-            fetch("http://localhost:3000/api/submit-form", {
+            fetch("https://ait-1.onrender.com/api/submit-form", {
               method: "POST",
               body: JSON.stringify(formData),
               headers: {
