--- a/public/FaQ's.html
+++ b/public/FaQ's.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FaQ's - Ansh Infotech</title>
+    <title>FaQ's - ANSH InfoTech</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -29,7 +29,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <!-- <img src="images/logo.png" alt="Bootstrap" width="240" height="50" /> -->
-          <h1 class="heading">ANSH Infotech</h1>
+          <h1 class="heading">ANSH InfoTech</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -76,11 +76,11 @@
                 <a href="training.html" class="nav-link">Skill Development Training</a>
               </li>
               <li class="nav-item">
+                <a href="register.html" class="nav-link">Register</a>
+              </li>
+              <li class="nav-item">
                 <a href="Contactus.html" class="nav-link">Contact Us</a>
               </li>
-              <!-- <li class="nav-item">
-                <a href="#" class="nav-link">Contact</a>
-              </li> -->
             </ul>
           </div>
         </div>
@@ -616,7 +616,7 @@
               alt=""
               class="img-fluid col-4"
             /> -->
-            <h1 class="heading">ANSH Infotech</h1>
+            <h1 class="heading">ANSH InfoTech</h1>
             <p>
               Creative-powered to fuel your growth goals. We build world-class
               digital products, software and branding.
@@ -624,31 +624,31 @@
           </div>
           <div class="col-md-6">
             <div class="row" style="gap: 80px">
-              <div class="col-md-2 footer-col">
-                <h5>Products</h5>
+              <div class="col-4 footer-col">
+                <h5>Reach Out To Us</h5>
                 <ul>
-                  <li>Unify App</li>
-                  <li>Page Builder</li>
-                  <li>Templates</li>
-                  <li>Pricing</li>
+                  <li><i class="fa-solid fa-message"></i> anshinfotech1@gmail.com
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-phone"></i> +911234567890
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-phone"></i> +911234567890
+                  </li>
                 </ul>
               </div>
-              <div class="col-md-2 footer-col">
-                <h5>Resources</h5>
-                <ul>
-                  <li>Design</li>
-                  <li>Inspiration</li>
-                  <li>Blog</li>
-                  <li>Jobs</li>
-                </ul>
-              </div>
-              <div class="col-md-3 footer-col">
-                <h5>Support</h5>
-                <ul>
-                  <li>Documentaton</li>
-                  <li>Help Desk</li>
-                  <li>Video Guides</li>
-                  <li>Seurity</li>
+              <div class="col-4 footer-col">
+                <h5 >Quick Links</h5>
+                <ul class="quick-links">
+                  <li>
+                    <a href="Contactus.html">Contact Us</a>
+                  </li>
+                  <li>
+                    <a href="about.html">About us</a>
+                  </li>
+                  <li>
+                    <a href="FaQ's.html">Frequently Asked Questions</a>
+                  </li>
                 </ul>
               </div>
             </div>
