--- a/public/courses/dataAnalyst.html
+++ b/public/courses/dataAnalyst.html
@@ -27,7 +27,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <!-- <img src="images/logo.png" alt="Bootstrap" width="240" height="50" /> -->
-          <h1 class="heading">ANSH Infotech</h1>
+          <h1 class="heading">ANSH InfoTech</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -60,23 +60,23 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto me-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link" href="../about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="FaQ's.html" class="nav-link">FaQ's</a>
+                <a href="../FaQ's.html" class="nav-link">FaQ's</a>
               </li>
               <li class="nav-item">
-                <a href="training.html" class="nav-link"
+                <a href="../training.html" class="nav-link"
                   >Skill Development Training</a
                 >
               </li>
               <li class="nav-item">
-                <a href="register.html" class="nav-link">Register</a>
+                <a href="../register.html" class="nav-link">Register</a>
               </li>
               <!-- <li class="nav-item">
                 <a href="#" class="nav-link">Contact</a>
