--- a/public/courses/devops.html
+++ b/public/courses/devops.html
@@ -27,7 +27,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <!-- <img src="images/logo.png" alt="Bootstrap" width="240" height="50" /> -->
-          <h1 class="heading">ANSH Infotech</h1>
+          <h1 class="heading">ANSH InfoTech</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -60,27 +60,27 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto me-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link" href="../about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="FaQ's.html" class="nav-link">FaQ's</a>
+                <a href="../FaQ's.html" class="nav-link">FaQ's</a>
               </li>
               <li class="nav-item">
-                <a href="training.html" class="nav-link"
+                <a href="../training.html" class="nav-link"
                   >Skill Development Training</a
                 >
               </li>
               <li class="nav-item">
-                <a href="register.html" class="nav-link">Register</a>
+                <a href="../register.html" class="nav-link">Register</a>
               </li>
-              <!-- <li class="nav-item">
-                <a href="#" class="nav-link">Contact</a>
-              </li> -->
+              <li class="nav-item">
+                <a href="../Contactus.html" class="nav-link">Contact Us</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -110,44 +110,26 @@
             <div class="row">
               <div class="col-sm-6 col-12">
                 <ul class="content-list">
-                  <li>
-                    <i class="fa-solid fa-check"></i>Introduction to DevOps
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>INTRODUCTION TO JENKINS
-                    (WITH ARCHITECTURE) AND MAVEN
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>CONTAINERIZATION WITH
-                    DOCKER
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>CONFIGURATION MANAGEMENT
-                    WITH ANSIBLE
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>CONTINUOUS MONITORING WITH
-                    NAGIOS
-                  </li>
+                  <li><i class="fa-solid fa-check"></i> Introduction to DevOps</li>
+                  <li><i class="fa-solid fa-check"></i> DevOps Culture and Principles</li>
+                  <li><i class="fa-solid fa-check"></i> Continuous Integration (CI) and Continuous Deployment (CD)</li>
+                  <li><i class="fa-solid fa-check"></i> Version Control Systems (Git, SVN)</li>
+                  <li><i class="fa-solid fa-check"></i> Infrastructure as Code (IaC)</li>
+                  <li><i class="fa-solid fa-check"></i> Configuration Management (Ansible, Puppet, Chef)</li>
+                  <li><i class="fa-solid fa-check"></i> Containerization and Orchestration (Docker, Kubernetes)</li>
+                  <li><i class="fa-solid fa-check"></i> Monitoring and Logging</li>
                 </ul>
               </div>
               <div class="col-sm-6 col-12">
                 <ul class="content-list">
-                  <li>
-                    <i class="fa-solid fa-check"></i>VERSION CONTROL WITH GIT
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>CONTINUOUS TESTING WITH
-                    SELENIUM
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>CONFIGURATION MANAGEMENT
-                    WITH PUPPET
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>CONTAINERIZATION USING
-                    KUBERNETES
-                  </li>
+                  <li><i class="fa-solid fa-check"></i> Continuous Monitoring and Feedback</li>
+                  <li><i class="fa-solid fa-check"></i> DevOps Toolchain</li>
+                  <li><i class="fa-solid fa-check"></i> Cloud Computing Platforms (AWS, Azure, Google Cloud)</li>
+                  <li><i class="fa-solid fa-check"></i> DevOps Practices (Agile, Lean, Kanban)</li>
+                  <li><i class="fa-solid fa-check"></i> Security and Compliance in DevOps</li>
+                  <li><i class="fa-solid fa-check"></i> Collaboration and Communication Tools</li>
+                  <li><i class="fa-solid fa-check"></i> DevOps Culture Transformation</li>
+                  <li><i class="fa-solid fa-check"></i> DevOps Case Studies and Real-World Projects</li>
                 </ul>
               </div>
             </div>
