--- a/public/courses/webdesign.html
+++ b/public/courses/webdesign.html
@@ -27,7 +27,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <!-- <img src="images/logo.png" alt="Bootstrap" width="240" height="50" /> -->
-          <h1 class="heading">ANSH Infotech</h1>
+          <h1 class="heading">ANSH InfoTech</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -60,27 +60,27 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto me-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link" href="../about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="FaQ's.html" class="nav-link">FaQ's</a>
+                <a href="../FaQ's.html" class="nav-link">FaQ's</a>
               </li>
               <li class="nav-item">
-                <a href="training.html" class="nav-link"
+                <a href="../training.html" class="nav-link"
                   >Skill Development Training</a
                 >
               </li>
               <li class="nav-item">
-                <a href="register.html" class="nav-link">Register</a>
+                <a href="../register.html" class="nav-link">Register</a>
               </li>
-              <!-- <li class="nav-item">
-                <a href="#" class="nav-link">Contact</a>
-              </li> -->
+              <li class="nav-item">
+                <a href="../Contactus.html" class="nav-link">Contact Us</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -111,95 +111,57 @@
               <div class="col-sm-6 col-12">
                 <ul class="content-list">
                   <li>
-                    <i class="fa-solid fa-check"></i>Introduction to Web
-                    Development
+                    <i class="fa-solid fa-check"></i>Introduction to User
+                    Interface (UI) Design
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>Getting Started with
-                    Javascript
+                    <i class="fa-solid fa-check"></i>Introduction to User
+                    Experience (UX) Design
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>Understanding the working
-                    of Javascript
+                    <i class="fa-solid fa-check"></i>Understanding User-Centered
+                    Design Principles
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>Data Types and Variables
-                  </li>
-                  <li><i class="fa-solid fa-check"></i>Control Flow</li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Arrays, Strings and Object
+                    <i class="fa-solid fa-check"></i>Wireframing and Prototyping
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>Functions, Arrow Functions
-                    and HOF
+                    <i class="fa-solid fa-check"></i>Typography and Color Theory
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>
-                    Getting Started with DOM
+                    <i class="fa-solid fa-check"></i>Visual Hierarchy and Layout
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>
-                    Working with DOM
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Local Storage
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Asynchronous Javascript
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Promises, fetch and Async/Await
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Error Handling
+                    <i class="fa-solid fa-check"></i>Responsive Design
+                    Principles
                   </li>
                 </ul>
               </div>
               <div class="col-sm-6 col-12">
                 <ul class="content-list">
                   <li>
-                    <i class="fa-solid fa-check"></i>Introduction to React
+                    <i class="fa-solid fa-check"></i>User Research Techniques
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>Understanding Components,
-                    JSX and Virtual DOM
+                    <i class="fa-solid fa-check"></i>Usability Testing and
+                    Feedback
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>Conditional Rendring, Props
-                    and Styling
-                  </li>
-                  <li><i class="fa-solid fa-check"></i>State and Hooks</li>
-                  <li><i class="fa-solid fa-check"></i>Control Flow</li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>useState, useEffect,
-                    useMemo and useCallback
+                    <i class="fa-solid fa-check"></i>Interaction Design Patterns
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>State management with Redux
+                    <i class="fa-solid fa-check"></i>Animation and
+                    Microinteractions
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>
-                    Introduction with Backend
+                    <i class="fa-solid fa-check"></i>Designing for Accessibility
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>
-                    Getting started with Node.js and Express.js
+                    <i class="fa-solid fa-check"></i>Creating Design Systems
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>HTTP Methods, Middlewares
-                    and Routing
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Getting started with MongoDB
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    CRUD Operation using MongoDB
+                    <i class="fa-solid fa-check"></i>Collaboration and
+                    Communication in Design Teams
                   </li>
                 </ul>
               </div>
