--- a/public/courses/bigdata.html
+++ b/public/courses/bigdata.html
@@ -27,7 +27,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <!-- <img src="images/logo.png" alt="Bootstrap" width="240" height="50" /> -->
-          <h1 class="heading">ANSH Infotech</h1>
+          <h1 class="heading">ANSH InfoTech</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -60,27 +60,27 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto me-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link" href="../about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="FaQ's.html" class="nav-link">FaQ's</a>
+                <a href="../FaQ's.html" class="nav-link">FaQ's</a>
               </li>
               <li class="nav-item">
-                <a href="training.html" class="nav-link"
+                <a href="../training.html" class="nav-link"
                   >Skill Development Training</a
                 >
               </li>
               <li class="nav-item">
-                <a href="register.html" class="nav-link">Register</a>
+                <a href="../register.html" class="nav-link">Register</a>
               </li>
-              <!-- <li class="nav-item">
-                <a href="#" class="nav-link">Contact</a>
-              </li> -->
+              <li class="nav-item">
+                <a href="../Contactus.html" class="nav-link">Contact Us</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -110,96 +110,49 @@
             <div class="row">
               <div class="col-sm-6 col-12">
                 <ul class="content-list">
+                  <li><i class="fa-solid fa-check"></i> Working with Python</li>
+
                   <li>
-                    <i class="fa-solid fa-check"></i>Introduction to Web
-                    Development
+                    <i class="fa-solid fa-check"></i> Introducing with Big Data
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>Getting Started with
-                    Javascript
+                    <i class="fa-solid fa-check"></i> Working with Basic Linux
+                    Commands
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>Understanding the working
-                    of Javascript
+                    <i class="fa-solid fa-check"></i>Working with Hadoopâ€™s
+                    Core
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>Data Types and Variables
+                    <i class="fa-solid fa-check"> </i>
+                    Working with Cluster Management
                   </li>
-                  <li><i class="fa-solid fa-check"></i>Control Flow</li>
+
                   <li>
-                    <i class="fa-solid fa-check"></i>Arrays, Strings and Object
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Functions, Arrow Functions
-                    and HOF
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Getting Started with DOM
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Working with DOM
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Local Storage
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Asynchronous Javascript
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Promises, fetch and Async/Await
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Error Handling
+                    <i class="fa-solid fa-check"></i>Working with Non-relational
+                    data in Hadoop
                   </li>
                 </ul>
               </div>
               <div class="col-sm-6 col-12">
                 <ul class="content-list">
+                  <li><i class="fa-solid fa-check"></i>Working with Pig</li>
+                  <li><i class="fa-solid fa-check"></i>Working with Spark</li>
                   <li>
-                    <i class="fa-solid fa-check"></i>Introduction to React
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Understanding Components,
-                    JSX and Virtual DOM
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Conditional Rendring, Props
-                    and Styling
-                  </li>
-                  <li><i class="fa-solid fa-check"></i>State and Hooks</li>
-                  <li><i class="fa-solid fa-check"></i>Control Flow</li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>useState, useEffect,
-                    useMemo and useCallback
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>State management with Redux
+                    <i class="fa-solid fa-check"></i>Working with Relational
+                    Data in Hadoop
                   </li>
                   <li>
                     <i class="fa-solid fa-check"></i>
-                    Introduction with Backend
+                    Working with Analysis of Data
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>
-                    Getting started with Node.js and Express.js
+                    <i class="fa-solid fa-check"></i>Working with Interactive
+                    Query Engines
                   </li>
                   <li>
-                    <i class="fa-solid fa-check"></i>HTTP Methods, Middlewares
-                    and Routing
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Getting started with MongoDB
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    CRUD Operation using MongoDB
+                    <i class="fa-solid fa-check"></i>Working on Real Life
+                    Application (Project)
                   </li>
                 </ul>
               </div>
