--- a/public/courses/ceh.html
+++ b/public/courses/ceh.html
@@ -27,7 +27,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <!-- <img src="images/logo.png" alt="Bootstrap" width="240" height="50" /> -->
-          <h1 class="heading">ANSH Infotech</h1>
+          <h1 class="heading">ANSH InfoTech</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -60,25 +60,25 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto me-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link" href="../about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="FaQ's.html" class="nav-link">FaQ's</a>
+                <a href="../FaQ's.html" class="nav-link">FaQ's</a>
               </li>
               <li class="nav-item">
-                <a href="training.html" class="nav-link">Skill Development Training</a>
+                <a href="../training.html" class="nav-link">Skill Development Training</a>
               </li>
               <li class="nav-item">
-                <a href="register.html" class="nav-link">Register</a>
+                <a href="../register.html" class="nav-link">Register</a>
               </li>
-              <!-- <li class="nav-item">
-                <a href="#" class="nav-link">Contact</a>
-              </li> -->
+              <li class="nav-item">
+                <a href="../Contactus.html" class="nav-link">Contact Us</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -110,97 +110,26 @@
             <div class="row">
               <div class="col-sm-6 col-12">
                 <ul class="content-list">
-                  <li>
-                    <i class="fa-solid fa-check"></i>Introduction to Web
-                    Development
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Getting Started with
-                    Javascript
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Understanding the working
-                    of Javascript
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Data Types and Variables
-                  </li>
-                  <li><i class="fa-solid fa-check"></i>Control Flow</li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Arrays, Strings and Object
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Functions, Arrow Functions
-                    and HOF
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Getting Started with DOM
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Working with DOM
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Local Storage
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Asynchronous Javascript
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Promises, fetch and Async/Await
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Error Handling
-                  </li>
+                  <li><i class="fa-solid fa-check"></i> Introduction to Ethical Hacking</li>
+                  <li><i class="fa-solid fa-check"></i> Footprinting and Reconnaissance</li>
+                  <li><i class="fa-solid fa-check"></i> Scanning Networks</li>
+                  <li><i class="fa-solid fa-check"></i> Enumeration</li>
+                  <li><i class="fa-solid fa-check"></i> System Hacking</li>
+                  <li><i class="fa-solid fa-check"></i> Malware Threats</li>
+                  <li><i class="fa-solid fa-check"></i> Sniffing</li>
+                  <li><i class="fa-solid fa-check"></i> Social Engineering</li>
                 </ul>
               </div>
               <div class="col-sm-6 col-12">
                 <ul class="content-list">
-                  <li>
-                    <i class="fa-solid fa-check"></i>Introduction to React
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Understanding Components,
-                    JSX and Virtual DOM
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Conditional Rendring, Props
-                    and Styling
-                  </li>
-                  <li><i class="fa-solid fa-check"></i>State and Hooks</li>
-                  <li><i class="fa-solid fa-check"></i>Control Flow</li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>useState, useEffect,
-                    useMemo and useCallback
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>State management with Redux
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Introduction with Backend
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Getting started with Node.js and Express.js
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>HTTP Methods, Middlewares
-                    and Routing
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Getting started with MongoDB
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    CRUD Operation using MongoDB
-                  </li>
+                  <li><i class="fa-solid fa-check"></i> Denial-of-Service</li>
+                  <li><i class="fa-solid fa-check"></i> Session Hijacking</li>
+                  <li><i class="fa-solid fa-check"></i> Evading IDS, Firewalls, and Honeypots</li>
+                  <li><i class="fa-solid fa-check"></i> Cryptography</li>
+                  <li><i class="fa-solid fa-check"></i> Penetration Testing</li>
+                  <li><i class="fa-solid fa-check"></i> Wireless Networks and Mobile Platforms</li>
+                  <li><i class="fa-solid fa-check"></i> System/Machine Hacking</li>
+                  <li><i class="fa-solid fa-check"></i> Incident Response and Reporting</li>
                 </ul>
               </div>
             </div>
