--- a/public/courses/networkad.html
+++ b/public/courses/networkad.html
@@ -27,7 +27,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <!-- <img src="images/logo.png" alt="Bootstrap" width="240" height="50" /> -->
-          <h1 class="heading">ANSH Infotech</h1>
+          <h1 class="heading">ANSH InfoTech</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -60,27 +60,27 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto me-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="../index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link" href="../about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="FaQ's.html" class="nav-link">FaQ's</a>
+                <a href="../FaQ's.html" class="nav-link">FaQ's</a>
               </li>
               <li class="nav-item">
-                <a href="training.html" class="nav-link"
+                <a href="../training.html" class="nav-link"
                   >Skill Development Training</a
                 >
               </li>
               <li class="nav-item">
-                <a href="register.html" class="nav-link">Register</a>
+                <a href="../register.html" class="nav-link">Register</a>
               </li>
-              <!-- <li class="nav-item">
-                <a href="#" class="nav-link">Contact</a>
-              </li> -->
+              <li class="nav-item">
+                <a href="../Contactus.html" class="nav-link">Contact Us</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -110,97 +110,26 @@
             <div class="row">
               <div class="col-sm-6 col-12">
                 <ul class="content-list">
-                  <li>
-                    <i class="fa-solid fa-check"></i>Introduction to Web
-                    Development
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Getting Started with
-                    Javascript
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Understanding the working
-                    of Javascript
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Data Types and Variables
-                  </li>
-                  <li><i class="fa-solid fa-check"></i>Control Flow</li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Arrays, Strings and Object
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Functions, Arrow Functions
-                    and HOF
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Getting Started with DOM
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Working with DOM
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Local Storage
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Asynchronous Javascript
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Promises, fetch and Async/Await
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Error Handling
-                  </li>
+                  <li><i class="fa-solid fa-check"></i> Introduction to Network Administration</li>
+                  <li><i class="fa-solid fa-check"></i> Network Topologies and Models</li>
+                  <li><i class="fa-solid fa-check"></i> OSI and TCP/IP Models</li>
+                  <li><i class="fa-solid fa-check"></i> IP Addressing and Subnetting</li>
+                  <li><i class="fa-solid fa-check"></i> Network Devices (Routers, Switches, Firewalls)</li>
+                  <li><i class="fa-solid fa-check"></i> VLANs and Inter-VLAN Routing</li>
+                  <li><i class="fa-solid fa-check"></i> Routing Protocols (OSPF, EIGRP, BGP)</li>
+                  <li><i class="fa-solid fa-check"></i> Wireless Networking</li>
                 </ul>
               </div>
               <div class="col-sm-6 col-12">
                 <ul class="content-list">
-                  <li>
-                    <i class="fa-solid fa-check"></i>Introduction to React
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Understanding Components,
-                    JSX and Virtual DOM
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>Conditional Rendring, Props
-                    and Styling
-                  </li>
-                  <li><i class="fa-solid fa-check"></i>State and Hooks</li>
-                  <li><i class="fa-solid fa-check"></i>Control Flow</li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>useState, useEffect,
-                    useMemo and useCallback
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>State management with Redux
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Introduction with Backend
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Getting started with Node.js and Express.js
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>HTTP Methods, Middlewares
-                    and Routing
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    Getting started with MongoDB
-                  </li>
-                  <li>
-                    <i class="fa-solid fa-check"></i>
-                    CRUD Operation using MongoDB
-                  </li>
+                  <li><i class="fa-solid fa-check"></i> Network Security Principles</li>
+                  <li><i class="fa-solid fa-check"></i> Access Control Lists (ACLs)</li>
+                  <li><i class="fa-solid fa-check"></i> VPN and Remote Access</li>
+                  <li><i class="fa-solid fa-check"></i> Network Monitoring and Management</li>
+                  <li><i class="fa-solid fa-check"></i> Troubleshooting Network Issues</li>
+                  <li><i class="fa-solid fa-check"></i> Network Services (DNS, DHCP, FTP, HTTP)</li>
+                  <li><i class="fa-solid fa-check"></i> Virtualization and Cloud Networking</li>
+                  <li><i class="fa-solid fa-check"></i> Network Design and Implementation</li>
                 </ul>
               </div>
             </div>
