--- a/public/courses/web.html
+++ b/public/courses/web.html
@@ -27,7 +27,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <!-- <img src="images/logo.png" alt="Bootstrap" width="240" height="50" /> -->
-          <h1 class="heading">ANSH Infotech</h1>
+          <h1 class="heading">ANSH InfoTech</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -78,9 +78,9 @@
               <li class="nav-item">
                 <a href="../register.html" class="nav-link">Register</a>
               </li>
-              <!-- <li class="nav-item">
-                <a href="#" class="nav-link">Contact</a>
-              </li> -->
+              <li class="nav-item">
+                <a href="../Contactus.html" class="nav-link">Contact Us</a>
+              </li>
             </ul>
           </div>
         </div>
