--- a/public/register.html
+++ b/public/register.html
@@ -38,7 +38,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <!-- <img src="images/logo.png" alt="Bootstrap" width="240" height="50" /> -->
-          <h1 class="heading">ANSH Infotech</h1>
+          <h1 class="heading">ANSH InfoTech</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -89,9 +89,9 @@
               <li class="nav-item">
                 <a href="register.html" class="nav-link">Register</a>
               </li>
-              <!-- <li class="nav-item">
-                <a href="#" class="nav-link">Contact</a>
-              </li> -->
+              <li class="nav-item">
+                <a href="Contactus.html" class="nav-link">Contact Us</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -112,7 +112,7 @@
               Get Started on Your Coding Odyssey!
             </h2>
             <p class="text-justify" style="color: #7b88a8">
-              Ready to embark on your coding journey with ANSH Infotech?
+              Ready to embark on your coding journey with ANSH InfoTech?
               Register today to access world-class programming education, expert
               guidance, and a supportive community of fellow learners. Fill out
               the form below and start coding your way to success!
@@ -578,7 +578,7 @@
               alt=""
               class="img-fluid col-4"
             /> -->
-            <h1 class="heading">ANSH Infotech</h1>
+            <h1 class="heading">ANSH InfoTech</h1>
             <p>
               Creative-powered to fuel your growth goals. We build world-class
               digital products, software and branding.
@@ -586,31 +586,31 @@
           </div>
           <div class="col-md-6">
             <div class="row" style="gap: 80px">
-              <div class="col-md-2 footer-col">
-                <h5>Products</h5>
+              <div class="col-4 footer-col">
+                <h5>Reach Out To Us</h5>
                 <ul>
-                  <li>Unify App</li>
-                  <li>Page Builder</li>
-                  <li>Templates</li>
-                  <li>Pricing</li>
+                  <li><i class="fa-solid fa-message"></i> anshinfotech1@gmail.com
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-phone"></i> +911234567890
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-phone"></i> +911234567890
+                  </li>
                 </ul>
               </div>
-              <div class="col-md-2 footer-col">
-                <h5>Resources</h5>
-                <ul>
-                  <li>Design</li>
-                  <li>Inspiration</li>
-                  <li>Blog</li>
-                  <li>Jobs</li>
-                </ul>
-              </div>
-              <div class="col-md-3 footer-col">
-                <h5>Support</h5>
-                <ul>
-                  <li>Documentaton</li>
-                  <li>Help Desk</li>
-                  <li>Video Guides</li>
-                  <li>Seurity</li>
+              <div class="col-4 footer-col">
+                <h5 >Quick Links</h5>
+                <ul class="quick-links">
+                  <li>
+                    <a href="Contactus.html">Contact Us</a>
+                  </li>
+                  <li>
+                    <a href="about.html">About us</a>
+                  </li>
+                  <li>
+                    <a href="FaQ's.html">Frequently Asked Questions</a>
+                  </li>
                 </ul>
               </div>
             </div>
