--- a/public/index.html
+++ b/public/index.html
@@ -741,18 +741,19 @@
               <div class="d-flex flex-column align-items-center">
                 <img
                   class="rounded-circle shadow-1-strong mb-4"
-                  src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(20).webp"
+                  src="images/Reviews/Charandeep Singh.png"
                   alt="avatar"
                   style="width: 150px"
                 />
                 <div class="text-center">
-                  <h5 class="mb-3">John Doe</h5>
+                  <h5 class="mb-3">Charandeep Singh</h5>
                   <p>Web Developer</p>
                   <p class="text-muted">
                     <i class="fas fa-quote-left pe-2"></i>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Minus et deleniti nesciunt sint eligendi reprehenderit
-                    reiciendis.
+                    It was a great experience. My course was web development. The
+                    curriculum has all the topics, and the content and
+                    technologies used were always up to date with current market
+                    requirements
                   </p>
                 </div>
                 <ul
@@ -908,18 +909,15 @@
               <div class="col-4 footer-col">
                 <h5>Reach Out To Us</h5>
                 <ul>
-                  <li><i class="fa-solid fa-message"></i> anshinfotech1@gmail.com
-                  </li>
                   <li>
-                    <i class="fa-solid fa-phone"></i> +911234567890
+                    <i class="fa-solid fa-message"></i> anshinfotech1@gmail.com
                   </li>
-                  <li>
-                    <i class="fa-solid fa-phone"></i> +911234567890
-                  </li>
+                  <li><i class="fa-solid fa-phone"></i> +911234567890</li>
+                  <li><i class="fa-solid fa-phone"></i> +911234567890</li>
                 </ul>
               </div>
               <div class="col-4 footer-col">
-                <h5 >Quick Links</h5>
+                <h5>Quick Links</h5>
                 <ul class="quick-links">
                   <li>
                     <a href="Contactus.html">Contact Us</a>
